[package]
name = "rust_docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"  # parsing options
nix = "0.24.2"   # linux calls
rtnetlink = "0.11.0"  # library for creating/deleting... linux nw interfaces
futures = "0.3" # rust async library
dbus = "0.9.2" # dbus is a inter-process communication protocol in linux
